--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
                     <div class="row">
                         <!-- Contact List -->
                         <div class="col-sm-4 sm-margin-b-50">
-                            <h3><a href="">Adana/Seyhan</a> <span class="text-uppercase margin-l-20">Head Office</span></h3>
+                            <h3><a href="">Anywhere</a> <span class="text-uppercase margin-l-20">Head Office</span></h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
                             <ul class="list-unstyled contact-list">
                                 <li><i class="margin-r-10 color-base icon-call-out"></i> 1 012 3456 7890</li>
@@ -711,7 +711,7 @@
 
                         <!-- Contact List -->
                         <div class="col-sm-4 sm-margin-b-50">
-                            <h3><a href="">Rabia Islek</a> <span class="text-uppercase margin-l-20">Operation</span></h3>
+                            <h3><a href="">Rabia Islek</a> <span class="text-uppercase margin-l-20">Developer</span></h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
                             <ul class="list-unstyled contact-list">
                                 <li><i class="margin-r-10 color-base icon-call-out"></i> 44 77 3456 7890</li>
@@ -722,7 +722,7 @@
 
                         <!-- Contact List -->
                         <div class="col-sm-4 sm-margin-b-50">
-                            <h3><a href="">Mustafa Islek</a> <span class="text-uppercase margin-l-20">Finance</span></h3>
+                            <h3><a href="">Mustafa Islek</a> <span class="text-uppercase margin-l-20">Developer</span></h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
                             <ul class="list-unstyled contact-list">
                                 <li><i class="margin-r-10 color-base icon-call-out"></i> 50 012 456 7890</li>
