--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <!-- THEME STYLES -->
         <link href="css/layout.min.css" rel="stylesheet" type="text/css"/>
-
+        <link href="css/layout.css" rel="stylesheet" type="text/css"/>
         <!-- Favicon -->
         <link rel="shortcut icon" href="favicon.ico"/>
     </head>
@@ -102,7 +102,7 @@
                         <div class="carousel-centered">
                             <div class="margin-b-40">
                                 <h1 class="carousel-title">MRI LAB</h1>
-                                <p class="color-slide">Lorem ipsum dolor amet consectetur adipiscing dolore magna aliqua <br/> enim minim estudiat veniam siad venumus dolore</p>
+                                <p class="color-white">Lorem ipsum dolor amet consectetur adipiscing dolore magna aliqua <br/> enim minim estudiat veniam siad venumus dolore <br/>Lorem ipsum dolor amet consectetur adipiscing dolore magna aliqua.</p>
                             </div>
                             <!-- <a href="https://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">Explore</a> -->
                         </div>
@@ -112,10 +112,10 @@
                     <img class="img-responsive" src="img/1920x1080/02.jpg" alt="Slider Image">
                     <div class="container">
                         <div class="carousel-centered">
-                            <div class="margin-b-40">
+                            <!-- <div class="margin-b-40">
                                 <h2 class="carousel-title">MRI LAB</h2>
                                 <p class="color-white">Lorem ipsum dolor amet consectetur adipiscing dolore magna aliqua <br/> enim minim estudiat veniam siad venumus dolore</p>
-                            </div>
+                            </div> -->
                             <!-- <a href="https://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">Explore</a> -->
                         </div>
                     </div>
@@ -124,10 +124,10 @@
                     <img class="img-responsive" src="img/1920x1080/03.jpg" alt="Slider Image">
                     <div class="container">
                         <div class="carousel-centered">
-                            <div class="margin-b-40">
+                            <!-- <div class="margin-b-40">
                                 <h2 class="carousel-title">MRI LAB</h2>
                                 <p class="color-white">Lorem ipsum dolor amet consectetur adipiscing dolore magna aliqua <br/> enim minim estudiat veniam siad venumus dolore</p>
-                            </div>
+                            </div> -->
                             <!-- <a href="https://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">Explore</a> -->
                         </div>
                     </div>
@@ -252,7 +252,7 @@
                         <div class="margin-b-20">
                             <img class="img-responsive" src="img/970x647/01.jpg" alt="Latest Products Image">
                         </div>
-                        <h4><a href="">Workspace</a> <span class="text-uppercase margin-l-20">Management</span></h4>
+                        <h4><a href="">Software</a> <span class="text-uppercase margin-l-20">Management</span></h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
                         <a class="link" href="">Read More</a>
                     </div>
@@ -392,8 +392,8 @@
                                                 <div class="margin-t-10 sm-margin-t-0">
                                                     <p class="margin-b-5"><strong>Project Leader:</strong> John Doe</p>
                                                     <p class="margin-b-5"><strong>Designer:</strong> Alisa Keys</p>
-                                                    <p class="margin-b-5"><strong>Developer:</strong> Mark Doe</p>
-                                                    <p class="margin-b-5"><strong>Customer:</strong> Keenthemes</p>
+                                                    <p class="margin-b-5"><strong>Developer:</strong> John Doe</p>
+                                                    <p class="margin-b-5"><strong>Customer:</strong> Alisa Keys</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -431,8 +431,8 @@
                                                 <div class="margin-t-10 sm-margin-t-0">
                                                     <p class="margin-b-5"><strong>Project Leader:</strong> John Doe</p>
                                                     <p class="margin-b-5"><strong>Designer:</strong> Alisa Keys</p>
-                                                    <p class="margin-b-5"><strong>Developer:</strong> Mark Doe</p>
-                                                    <p class="margin-b-5"><strong>Customer:</strong> Keenthemes</p>
+                                                    <p class="margin-b-5"><strong>Developer:</strong> John Doe</p>
+                                                    <p class="margin-b-5"><strong>Customer:</strong> Alisa Keys</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -470,8 +470,8 @@
                                                 <div class="margin-t-10 sm-margin-t-0">
                                                     <p class="margin-b-5"><strong>Project Leader:</strong> John Doe</p>
                                                     <p class="margin-b-5"><strong>Designer:</strong> Alisa Keys</p>
-                                                    <p class="margin-b-5"><strong>Developer:</strong> Mark Doe</p>
-                                                    <p class="margin-b-5"><strong>Customer:</strong> Keenthemes</p>
+                                                    <p class="margin-b-5"><strong>Developer:</strong> John Doe</p>
+                                                    <p class="margin-b-5"><strong>Customer:</strong> Alisa Keys</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -509,8 +509,8 @@
                                                 <div class="margin-t-10 sm-margin-t-0">
                                                     <p class="margin-b-5"><strong>Project Leader:</strong> John Doe</p>
                                                     <p class="margin-b-5"><strong>Designer:</strong> Alisa Keys</p>
-                                                    <p class="margin-b-5"><strong>Developer:</strong> Mark Doe</p>
-                                                    <p class="margin-b-5"><strong>Customer:</strong> Keenthemes</p>
+                                                    <p class="margin-b-5"><strong>Developer:</strong> John Doe</p>
+                                                    <p class="margin-b-5"><strong>Customer:</strong> Alisa Keys</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -548,8 +548,8 @@
                                                 <div class="margin-t-10 sm-margin-t-0">
                                                     <p class="margin-b-5"><strong>Project Leader:</strong> John Doe</p>
                                                     <p class="margin-b-5"><strong>Designer:</strong> Alisa Keys</p>
-                                                    <p class="margin-b-5"><strong>Developer:</strong> Mark Doe</p>
-                                                    <p class="margin-b-5"><strong>Customer:</strong> Keenthemes</p>
+                                                    <p class="margin-b-5"><strong>Developer:</strong> John Doe</p>
+                                                    <p class="margin-b-5"><strong>Customer:</strong> Alisa Keys</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -704,7 +704,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
                             <ul class="list-unstyled contact-list">
                                 <li><i class="margin-r-10 color-base icon-call-out"></i> 1 012 3456 7890</li>
-                                <li><i class="margin-r-10 color-base icon-envelope"></i> hq@aitOnepage.com</li>
+                                <li><i class="margin-r-10 color-base icon-envelope"></i> hq@page.com</li>
                             </ul>
                         </div>
                         <!-- End Contact List -->
@@ -715,7 +715,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
                             <ul class="list-unstyled contact-list">
                                 <li><i class="margin-r-10 color-base icon-call-out"></i> 44 77 3456 7890</li>
-                                <li><i class="margin-r-10 color-base icon-envelope"></i> operation@AitOnepage.com</li>
+                                <li><i class="margin-r-10 color-base icon-envelope"></i> developer@page.com</li>
                             </ul>
                         </div>
                         <!-- End Contact List -->
@@ -726,7 +726,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
                             <ul class="list-unstyled contact-list">
                                 <li><i class="margin-r-10 color-base icon-call-out"></i> 50 012 456 7890</li>
-                                <li><i class="margin-r-10 color-base icon-envelope"></i> finance@AitOnepage.com</li>
+                                <li><i class="margin-r-10 color-base icon-envelope"></i> developer@page.com</li>
                             </ul>
                         </div>
                         <!-- End Contact List -->
