--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                         <div class="margin-b-20">
                             <img class="img-responsive" src="img/970x647/02.jpg" alt="Latest Products Image">
                         </div>
-                        <h4><a href="">Minimalism</a> <span class="text-uppercase margin-l-20">Developmeny</span></h4>
+                        <h4><a href="">Minimalism</a> <span class="text-uppercase margin-l-20">Development</span></h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
                         <a class="link" href="">Read More</a>
                     </div>
