--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
         <!--========== END FOOTER ==========-->
 
         <!-- Back To Top -->
-        <a href="javascript:void(0);" class="js-back-to-top back-to-top">🠕</a>
+        <a href="javascript:void(0);" class="js-back-to-top back-to-top">⇧</a>
   
  
         <!-- JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
