sayfa turkceye cevrildi

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
                             <ul class="nav navbar-nav navbar-nav-right">
-                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#body">Home</a></li>
-                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#about">About</a></li>
-                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#products">Products</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#body">MriLab</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#about">Hakkımızda</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#products">Blog Yazılarımız</a></li>
                                 <!-- <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#pricing">Pricing</a></li> -->
-                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">Work</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">Projeler</a></li>
                                 <!-- <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#service">Service</a></li> -->
-                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#contact">Contact</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#contact">İletişim</a></li>
                             </ul>
                         </div>
                     </div>
@@ -91,6 +91,7 @@
                     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
                 </ol>
             </div>
 
@@ -102,7 +103,7 @@
                         <div class="carousel-centered">
                             <div class="margin-b-40">
                                 <h1 class="carousel-title">MRI LAB</h1>
-                                <p class="color-white">Lorem ipsum dolor amet consectetur adipiscing dolore magna aliqua <br/> enim minim estudiat veniam siad venumus dolore <br/>Lorem ipsum dolor amet consectetur adipiscing dolore magna aliqua.</p>
+                                <p class="color-white">Yönetilebilir Website Yazılımları <br/> Tüm Tarayıcılar ile Uyumlu Tasarımlar<br/> Hızlı, Güvenilir, Kesintisiz, Web Hosting <br/></p>
                             </div>
                             <!-- <a href="https://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">Explore</a> -->
                         </div>
@@ -132,6 +133,18 @@
                         </div>
                     </div>
                 </div>
+                <div class="item">
+                    <img class="img-responsive" src="img/1920x1080/04.jpg" alt="Slider Image">
+                    <div class="container">
+                        <div class="carousel-centered">
+                            <!-- <div class="margin-b-40">
+                                <h2 class="carousel-title">MRI LAB</h2>
+                                <p class="color-white">Lorem ipsum dolor amet consectetur adipiscing dolore magna aliqua <br/> enim minim estudiat veniam siad venumus dolore</p>
+                            </div> -->
+                            <!-- <a href="https://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">Explore</a> -->
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <!--========== SLIDER ==========-->
@@ -145,8 +158,8 @@
                     <div class="masonry-grid-sizer col-xs-6 col-sm-6 col-md-1"></div>
                     <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4 sm-margin-b-30">
                         <div class="margin-b-60">
-                            <h2>Coding</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna ut consequat siad esqudiat dolor</p>
+                            <h2>Yazılım</h2>
+                            <p class="yazi">Teknolojik gelişmeler doğrultusunda bu sistemleri daha etkin kullanmanız ve verimli kullanabilmeniz için size özel yazılım çözümleri üretiyoruz.</p>
                         </div>
                         <img class="full-width img-responsive wow fadeInUp" src="img/500x500/01.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
                     </div>
@@ -154,13 +167,13 @@
                         <div class="margin-b-60">
                             <img class="full-width img-responsive wow fadeInUp" src="img/500x500/02.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".3s">
                         </div>
-                        <h2>Design</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna ut consequat siad esqudiat dolor</p>
+                        <h2>Tasarım</h2>
+                        <p class="yazi">Talepleriniz doğrultusunda kullanışlı ve hızlı web tasarımları sunuyoruz.</p>
                     </div>
                     <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4">
                         <div class="margin-t-60 margin-b-60">
-                            <h2>Support</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna ut consequat siad esqudiat dolor</p>
+                            <h2>Destek</h2>
+                            <p class="yazi">Müşterilerimizin projeleri için proje takibi ve destek sağlıyoruz.</p>
                         </div>
                         <img class="full-width img-responsive wow fadeInUp" src="img/500x500/03.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".4s">
                     </div>
@@ -291,7 +304,7 @@
                 <div class="content-lg container">
                     <div class="row row-space-1">
                         <div class="col-sm-4 sm-margin-b-2">
-                            <!-- Pricing -->
+                            <-- Pricing -->
                             <!-- <div class="pricing">
                                 <div class="margin-b-30">
                                     <i class="pricing-icon icon-chemistry"></i>
