blog ve iletisim degisiklikleri

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <ul class="nav navbar-nav navbar-nav-right">
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#body">MriLab</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#about">Hakkımızda</a></li>
-                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#products">Blog Yazılarımız</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#products">Blog</a></li>
                                 <!-- <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#pricing">Pricing</a></li> -->
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">Projeler</a></li>
                                 <!-- <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#service">Service</a></li> -->
@@ -103,7 +103,7 @@
                         <div class="carousel-centered">
                             <div class="margin-b-40">
                                 <h1 class="carousel-title">MRI LAB</h1>
-                                <p class="color-white">Yönetilebilir Website Yazılımları <br/> Tüm Tarayıcılar ile Uyumlu Tasarımlar<br/> Hızlı, Güvenilir, Kesintisiz, Web Hosting <br/></p>
+                                <p class="color-white">Yönetilebilir Website Yazılımları <br/> Tüm Tarayıcılar ile Uyumlu Tasarımlar<br/> Hızlı, Güvenilir, Kesintisiz, Web Hosting ve Domain Seçimi <br/></p>
                             </div>
                             <!-- <a href="https://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">Explore</a> -->
                         </div>
@@ -253,7 +253,7 @@
             <div class="content-lg container">
                 <div class="row margin-b-40">
                     <div class="col-sm-6">
-                        <h2>Products</h2>
+                        <h2>Blog</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua enim minim veniam exercitation</p>
                     </div>
                 </div>
@@ -265,8 +265,8 @@
                         <div class="margin-b-20">
                             <img class="img-responsive" src="img/970x647/01.jpg" alt="Latest Products Image">
                         </div>
-                        <h4><a href="">Software</a> <span class="text-uppercase margin-l-20">Management</span></h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                        <h4><a href="">Kodlama</a> <span class="text-uppercase margin-l-20">Management</span></h4>
+                        <p>Kodlama ya da programlama, bir bilgisayar sistemine ya da elektronik devreye işlem yaptırmak için yazılan komut dizisidir.</p>
                         <a class="link" href="">Read More</a>
                     </div>
                     <!-- End Latest Products -->
@@ -276,8 +276,9 @@
                         <div class="margin-b-20">
                             <img class="img-responsive" src="img/970x647/02.jpg" alt="Latest Products Image">
                         </div>
-                        <h4><a href="">Minimalism</a> <span class="text-uppercase margin-l-20">Development</span></h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                        <h4><a href="">Minimalizm</a> <span class="text-uppercase margin-l-20">Development</span></h4>
+                        <p>Minimalizm, son yıllarda çok farklı branşlarda trend bir kavram. Peki minimalizm ne demek? Özetle 'sadecilik' diyebiliriz.Sadecilik kavramında görünüş, aslında bir değerdir. 
+                            Eğer bir işlevi yoksa, o zaman bu özellik görünüşe dahil edilmemelidir.</p>
                         <a class="link" href="">Read More</a>
                     </div>
                     <!-- End Latest Products -->
@@ -287,8 +288,9 @@
                         <div class="margin-b-20">
                             <img class="img-responsive" src="img/970x647/03.jpg" alt="Latest Products Image">
                         </div>
-                        <h4><a href="">Cleant Style</a> <span class="text-uppercase margin-l-20">Design</span></h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                        <h4><a href="">Yazılım Tasarımı</a> <span class="text-uppercase margin-l-20">Design</span></h4>
+                        <p>Hem bilgisayar sistemini oluşturan donanım parçalarının yönetimini hem de kullanıcıların işlerini yapmak için gerekli olan konular topluluğuna yazılım denir. 
+                            Tasarım ise herhangi bir mühendislik ürünü geliştirme sürecindeki ilk adım sayılabilir.</p>
                         <a class="link" href="">Read More</a>
                     </div>
                     <!-- End Latest Products -->
@@ -367,8 +369,8 @@
                 <div class="content-md container">
                     <div class="row margin-b-40">
                         <div class="col-sm-6">
-                            <h2>Work</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua enim minim veniam exercitation</p>
+                            <h2>Projeler</h2>
+                            <p class="yazi">Yaptığımız tasarımlar ve gerçekleştirmiş olduğumuz projeler</p>
                         </div>
                     </div>
                     <!--// end row -->
@@ -713,7 +715,7 @@
                     <div class="row">
                         <!-- Contact List -->
                         <div class="col-sm-4 sm-margin-b-50">
-                            <h3><a href="">Anywhere</a> <span class="text-uppercase margin-l-20">Head Office</span></h3>
+                            <h3><a href="">İletişim</a> <span class="text-uppercase margin-l-20">Head Office</span></h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
                             <ul class="list-unstyled contact-list">
                                 <li><i class="margin-r-10 color-base icon-call-out"></i> 1 012 3456 7890</li>
@@ -724,7 +726,7 @@
 
                         <!-- Contact List -->
                         <div class="col-sm-4 sm-margin-b-50">
-                            <h3><a href="">Rabia Islek</a> <span class="text-uppercase margin-l-20">Developer</span></h3>
+                            <h3><a href="">Rabia İşlek</a> <span class="text-uppercase margin-l-20">Developer</span></h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
                             <ul class="list-unstyled contact-list">
                                 <li><i class="margin-r-10 color-base icon-call-out"></i> 44 77 3456 7890</li>
@@ -735,7 +737,7 @@
 
                         <!-- Contact List -->
                         <div class="col-sm-4 sm-margin-b-50">
-                            <h3><a href="">Mustafa Islek</a> <span class="text-uppercase margin-l-20">Developer</span></h3>
+                            <h3><a href="">Mustafa İşlek</a> <span class="text-uppercase margin-l-20">Developer</span></h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
                             <ul class="list-unstyled contact-list">
                                 <li><i class="margin-r-10 color-base icon-call-out"></i> 50 012 456 7890</li>
@@ -764,10 +766,10 @@
                         <div class="col-sm-2 sm-margin-b-30">
                             <!-- List -->
                             <ul class="list-unstyled footer-list">
-                                <li class="footer-list-item"><a href="">Home</a></li>
-                                <li class="footer-list-item"><a href="">About</a></li>
-                                <li class="footer-list-item"><a href="">Work</a></li>
-                                <li class="footer-list-item"><a href="">Contact</a></li>
+                                <li class="footer-list-item"><a href="">MriLab</a></li>
+                                <li class="footer-list-item"><a href="">Hakkımızda</a></li>
+                                <li class="footer-list-item"><a href="">Projeler</a></li>
+                                <li class="footer-list-item"><a href="">İletişim</a></li>
                             </ul>
                             <!-- End List -->
                         </div>
@@ -784,9 +786,9 @@
                         <div class="col-sm-3">
                             <!-- List -->
                             <ul class="list-unstyled footer-list">
-                                <li class="footer-list-item"><a href="">Subscribe to Our Newsletter</a></li>
-                                <li class="footer-list-item"><a href="">Privacy Policy</a></li>
-                                <li class="footer-list-item"><a href="">Terms &amp; Conditions</a></li>
+                                <li class="footer-list-item"><a href="">Yazılım Geliştirme</a></li>
+                                <li class="footer-list-item"><a href="">Web Tasarım</a></li>
+                                <li class="footer-list-item"><a href="">Domain</a></li>
                             </ul>
                             <!-- End List -->
                         </div>
