--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 <div class="row margin-b-40">
                     <div class="col-sm-6">
                         <h2>Blog</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua enim minim veniam exercitation</p>
+                        <p class="yazi">Gelişen yazılım ve algoritmaları sizler için paylaşıyoruz.</p>
                     </div>
                 </div>
                 <!--// end row -->
