--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="logo-wrap" href="#body">
-                                <img class="logo-img logo-img-main" src="img/sooonnn.png" alt="Asentus Logo">
-                                <img class="logo-img logo-img-active" src="img/sooonnn.png" alt="Asentus Logo">
+                                <img class="logo-img logo-img-main" src="img/sonlogo.png" alt="Asentus Logo">
+                                <img class="logo-img logo-img-active" src="img/sonlogo.png" alt="Asentus Logo">
                             </a>
                         </div>
                         <!-- End Logo --> 
@@ -802,7 +802,7 @@
             <div class="content container">
                 <div class="row">
                     <div class="col-xs-6">
-                        <img class="footer-logo" src="img/sooonnn.png" alt="Aitonepage Logo">
+                        <img class="footer-logo" src="img/sonlogo.png" alt="Aitonepage Logo">
                     </div>
                   
                     <div class="col-xs-6 text-right">
