--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <div class="carousel-centered">
                             <div class="margin-b-40">
                                 <h1 class="carousel-title">MRI LAB</h1>
-                                <p class="color-white">Yönetilebilir Website Yazılımları <br/> Tüm Tarayıcılar ile Uyumlu Tasarımlar<br/> Hızlı, Güvenilir, Kesintisiz, Web Hosting ve Domain Seçimi <br/></p>
+                                <p class="color-white">Yönetilebilir Website Yazılımları <br/> Tüm Tarayıcılar ile Uyumlu Tasarımlar</p>
                             </div>
                             <!-- <a href="https://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">Explore</a> -->
                         </div>
