--- a/index.html
+++ b/index.html
@@ -103,7 +103,11 @@
                         <div class="carousel-centered">
                             <div class="margin-b-40">
                                 <h1 class="carousel-title">MRI LAB</h1>
-                                <p class="color-white">Yönetilebilir Website Yazılımları <br/> Tüm Tarayıcılar ile Uyumlu Tasarımlar</p>
+                                <p class="color-white">
+
+                             Sevgiyle Kodluyoruz 
+
+                                </p>
                             </div>
                             <!-- <a href="https://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">Explore</a> -->
                         </div>
@@ -265,7 +269,7 @@
                         <div class="margin-b-20">
                             <img class="img-responsive" src="img/970x647/01.jpg" alt="Latest Products Image">
                         </div>
-                        <h4><a href="">Kodlama</a> <span class="text-uppercase margin-l-20">Management</span></h4>
+                        <h4><a href="">Gelişen Teknoloji ve Kodlama</a> <span class="text-uppercase margin-l-20">Management</span></h4>
                         <p>Kodlama ya da programlama, bir bilgisayar sistemine ya da elektronik devreye işlem yaptırmak için yazılan komut dizisidir.</p>
                         <a class="link" href="">Read More</a>
                     </div>
@@ -276,9 +280,8 @@
                         <div class="margin-b-20">
                             <img class="img-responsive" src="img/970x647/02.jpg" alt="Latest Products Image">
                         </div>
-                        <h4><a href="">Minimalizm</a> <span class="text-uppercase margin-l-20">Development</span></h4>
-                        <p>Minimalizm, son yıllarda çok farklı branşlarda trend bir kavram. Peki minimalizm ne demek? Özetle 'sadecilik' diyebiliriz.Sadecilik kavramında görünüş, aslında bir değerdir. 
-                            Eğer bir işlevi yoksa, o zaman bu özellik görünüşe dahil edilmemelidir.</p>
+                        <h4><a href="">Neden Bir Web Sitesine Sahip Olmalıyım?</a> <span class="text-uppercase margin-l-20">Development</span></h4>
+                        <p>İşletmeniz için profesyonel bir web sitesi satın almak ucuz ve kolay olabilir ve sizin işinizi daha da kolaylaştırabilir ve cok daha önemlisi bir web sitesine sahip olmak size zaman ve para kazandıracaktır.</p>
                         <a class="link" href="">Read More</a>
                     </div>
                     <!-- End Latest Products -->
@@ -288,7 +291,7 @@
                         <div class="margin-b-20">
                             <img class="img-responsive" src="img/970x647/03.jpg" alt="Latest Products Image">
                         </div>
-                        <h4><a href="">Yazılım Tasarımı</a> <span class="text-uppercase margin-l-20">Design</span></h4>
+                        <h4><a href="">Responsive Web Tasarım Nedir?</a> <span class="text-uppercase margin-l-20">Design</span></h4>
                         <p>Hem bilgisayar sistemini oluşturan donanım parçalarının yönetimini hem de kullanıcıların işlerini yapmak için gerekli olan konular topluluğuna yazılım denir. 
                             Tasarım ise herhangi bir mühendislik ürünü geliştirme sürecindeki ilk adım sayılabilir.</p>
                         <a class="link" href="">Read More</a>
@@ -806,7 +809,7 @@
                     </div>
                   
                     <div class="col-xs-6 text-right">
-                         <p class="margin-b-0">©<script>document.write( new Date().getFullYear() );</script> - Sevgiyle kodlandı ❤️ Rabia.</p>
+                         <p class="margin-t-10">©<script>document.write( new Date().getFullYear() );</script> - Sevgiyle kodlandı ❤️ Rabia.</p>
                     </div>
                 </div>
                 <!--// end row -->
@@ -818,7 +821,7 @@
         <!--========== END FOOTER ==========-->
 
         <!-- Back To Top -->
-        <a href="javascript:void(0);" class="js-back-to-top back-to-top">⇧</a>
+        <a href="javascript:void(0);" class="js-back-to-top back-to-top"><p class="ok">⇧</p></a>
   
  
         <!-- JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
